--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
-    "antd": "^3.24.3",
+    "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
@@ -48,6 +48,7 @@
     "postcss-loader": "3.0.0",
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
