--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
+    "cross-env": "^6.0.3",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
@@ -70,8 +71,9 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "cross-env REACT_APP_CURRENT_ENV=development node scripts/start.js",
+    "build:dev": "cross-env REACT_APP_CURRENT_ENV=development node scripts/build.js",
+    "build:prod": "cross-env REACT_APP_CURRENT_ENV=production node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
