--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
+    "source-map-explorer": "^2.1.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
@@ -71,6 +72,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "cross-env REACT_APP_CURRENT_ENV=development node scripts/start.js",
     "build:dev": "cross-env REACT_APP_CURRENT_ENV=development node scripts/build.js",
     "build:prod": "cross-env REACT_APP_CURRENT_ENV=production node scripts/build.js",
