--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^16.11.0",
     "react-hook-form": "^3.26.4",
     "react-router-dom": "^5.1.2",
+    "react-svg": "^10.0.23",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
