--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
+    "bizgoblin": "^0.2.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
